--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -302,3 +302,10 @@ input {
     background-color: #007bff40;
   }
 }
+.userContainer {
+  height: 60px;
+  transition: all 0.3s ease-in-out;
+}
+.userContainer:hover {
+  background-color: aliceblue;
+}
