--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -103,7 +103,7 @@
 .messageContainer1 {
   height: 79vh;
   overflow-y: scroll;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   border-bottom: 1px solid rgb(163, 161, 161);
 }
 .messageContainer1::-webkit-scrollbar {
@@ -308,4 +308,47 @@ input {
 }
 .userContainer:hover {
   background-color: aliceblue;
+}
+.meReply {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+.otherReply {
+  display: flex;
+  align-items: center;
+}
+.svgReply {
+  display: inline-block;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.svgReply:hover {
+  opacity: 1;
+  cursor: pointer;
+  user-select: none;
+}
+.svgReply:focus,
+.svgReply:active {
+  transform: scale(0.9);
+}
+.replyMessageContainer {
+  background-color: rgba(218, 218, 218, 0.937);
+  font-size: 12px;
+  padding: 5px 20px;
+  display: flex;
+  justify-content: space-between;
+  /* margin-bottom: 200px !important; */
+}
+.replyClos {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  transition: 0.3s all ease-in-out;
+  text-align: center;
+}
+.replyClos:hover {
+  cursor: pointer;
+  background-color: #00000060;
+  color: #fff;
 }
